[project]
name = "rfuav"
version = "0.1.0"
description = ""
authors = [
    {name = "Stas Shelekhov",email = "stas.sheleh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.9.0.80)",
    "numpy (>=1.24.4)",
    "matplotlib (>=3.9.2)",
    "opencv-python-headless (>=4.9.0.80)",
    "pillow (>=10.4.0)",
    "scipy (>=1.13.1)",
    "imageio (>=2.36.0)",
    "seaborn (>=0.13.2)",
    "pandas (>=2.2.3)",
    "colorama (>=0.4.6)",
    "psutil (>=6.1.0)",
    "pyyaml (>=6.0.2)",
    "six (>=1.16.0)",
    "tqdm (>=4.67.1)",
    "thop (>=0.1.1.post2209072238)",
    "torch (>=2.0.1)",
    "torchvision (>=0.15.2)",
    "torchaudio (>=2.0.2)",
    "albumentations (>=1.4.20)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "utils" },
    { include = "tools" }
]
